# Swarmonomicon

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  Architecture.md  CONVERSATION.md  CROSS_COMPILATION.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.build  EC2_BUILD_README.md  MACOS_TO_EC2.md  README.md  README_MCP.md  TODO.md  WINDOWS_BUILD.md  WSL_BUILD.md  agent-learning-multi-agent-init-dive.txt  browser-agent-plan.md  build.rs  build_and_deploy.sh  build_and_deploy_wsl.sh  build_direct_wsl.sh  build_from_windows.sh  build_macos_to_ec2.sh  changes.txt  check_ollama.sh  check_service.sh  deploy_to_ec2.sh  docker-compose.yml  docker-manage.sh  docker-setup.ps1  docker-setup.sh  ec2_build.sh  errors.txt  gitdiff.txt  lessons.md  restart_services.sh  run_mcp.sh  (+7 more)
.cargo/: config.toml
.claude/data/sessions/: b3ccf192-2d34-4767-ab74-81b066d1b7ce.json
.claude_temp/: last_tool_use_id.txt
config/: mosquitto.conf
docs/: TODO.md  api.md  learning_system_usage.md  lessons-todo-system.md  mcp_todo_client.md  notes.md  omnispindle.md  state_persistence_guide.md  swarm_coordination_summary.md  task_intelligence_usage.md
docs/lessons_learned/: agent-learning-implementation.md  lessons.md  squash2-lessons-learned-State-handling.md  task-intelligence-implementation.md
docs/plans/: state_persistence.md
examples/: log  mcp_todo_client_example.rs
projects/python/lego-vision/: README.md  setup.py
projects/rust/test_project/: README.md
src/: error.rs  lib.rs  main.rs  omnispindle.rs
src/agents/: balena_wrapper.rs  browser_agent.rs  changes.txt  git_assistant.rs  greeter.rs  haiku.rs  learning_service.rs  mod.rs  project_init.rs  transfer.rs  user_agent.rs  wrapper.rs
src/agents/balena/: mod.rs
src/agents/browser/: mod.rs
src/agents/git_assistant/: mod.rs
src/agents/greeter/: mod.rs
src/agents/learning/: interaction.rs  mod.rs  personality.rs  preference.rs  routing.rs
src/agents/project/: mod.rs
src/agents/rl/: flappy.rs  mod.rs  model.rs
src/agents/rl/flappy/: mod.rs  viz.rs
src/agents/rl/flappy/viz/: mod.rs
src/agents/rl/model/: config.rs  mod.rs
src/agents/rl/viz/: mod.rs
src/agents/swarm_coordination/: consensus.rs  delegation.rs  emergence.rs  mod.rs  shared_learning.rs  swarm_metrics.rs
src/agents/task_intelligence/: decomposer.rs  dependency_learner.rs  mod.rs  priority_predictor.rs  smart_todo.rs  task_history.rs  time_predictor.rs
src/ai/: goose.rs  local.rs  mod.rs
src/api/: mod.rs  models.rs  routes.rs  websocket.rs
src/app/agentConfigs/frontDesk/: greeter.ts
src/app/agentConfigs/frontDeskAuthentication/: authentication.ts
src/config/: mod.rs
src/state/: agent_persistence.rs  mod.rs  persistence.rs  recovery.rs  validation.rs
src/tools/: git.rs  goose.rs  gpt_batch.rs  mcp_todo_client.rs  mod.rs  object_detection.rs  project.rs  screenshot_detection.rs  todo.rs  yolo.rs  yolo_test.rs
src/tools/tests/: gpt_batch_test.rs  mcp_todo_client_test.rs  mod.rs
src/types/: mod.rs  projects.rs  todo.rs
wyrmwatch/: README.md  requirements.txt  wyrmwatch_server.py
