[package]
name = "swarmonomicon"
version = "0.1.3"
edition = "2021"
authors = ["Danedens31@gmail.com"]
description = "Madness Interactive - Agent Swarm and Eventbase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["greeter-agent", "haiku-agent", "git-agent"]
rl = ["rand", "pixels", "winit", "winit_input_helper", "plotters"]
greeter-agent = []
haiku-agent = []
git-agent = ["rand"]
browser-agent = ["browser-agent-deps"]

# Dependencies required by browser-agent
browser-agent-deps = ["chromiumoxide", "chromiumoxide_cdp", "tokio-tungstenite"]

[dependencies]
# Core dependencies
tokio = { version = "1.25.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-trait = "0.1.64"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower = { version = "0.4", features = ["util"] }
dotenv = "0.15"
async-openai = "0.18"
rumqttc = "0.24.0"
futures = "0.3"
thiserror = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
screenshots = "0.8"
lazy_static = "1.4"
mockall = "0.12"
hyper = "1.5.2"
mongodb = { version = "2.0", features = ["bson-chrono-0_4"] }
async-std = "1.10"
futures-util = "0.3"
env_logger = "0.10"

anyhow = "1.0.68"

opencv = { version = "0.84", features = ["dnn"], default-features = false, optional = true }

# Optional dependencies for RL visualization
pixels = { version = "0.13.0", optional = true }
winit = { version = "0.28", optional = true }
winit_input_helper = { version = "0.14", optional = true }
plotters = { version = "0.3", optional = true }

log = "0.4.17"

rand = { version = "0.8", optional = true }

# Optional dependencies for browser-agent
chromiumoxide = { version = "0.5", optional = true }
chromiumoxide_cdp = { version = "0.5", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[lib]
name = "swarmonomicon"
path = "src/lib.rs"

[[bin]]
name = "swarm"
path = "src/bin/swarm.rs"

[[bin]]
name = "todo_worker"
path = "src/bin/todo_worker.rs"

[[bin]]
name = "mcp_todo_server"
path = "src/bin/mcp_todo_server.rs"

[[bin]]
name = "test_mcp_todo_publish"
path = "src/bin/test_mcp_todo_publish.rs"

[[bin]]
name = "add_todo"
path = "src/bin/add_todo.rs"

[[bin]]
name = "train_flappy"
path = "src/bin/train_flappy.rs"
required-features = ["rl"]

[build-dependencies]
pkg-config = "0.3"
